--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="cabecalho__pesquisar">
 
                 <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
-                <button  aria-label="button" class="pesquisar__botao">
+                <button  class="pesquisar__botao">
 
             </div>
 
@@ -35,7 +35,6 @@
     </header>
 
     <ul class="videos__container" alt="videos alura" data-lista >
-      
     </ul>
     <script type="module" src="./js/mostrarVideos.js"></script>
 </body>
